--- a/static/index.html
+++ b/static/index.html
@@ -34,7 +34,7 @@
                                 </select>
                             </div>
                         </div>
-                        <div class="row mt-2">
+                        <div style="display: none;" class="row mt-2">
                             <div class="col">
                                 <label>Dispositivo de entrada:</label>
                                 <select id="inputDevice" class="form-select"></select>
@@ -46,7 +46,7 @@
                         </div>
                         <div class="row mt-2">
                             <div class="col">
-                                <div class="alert alert-info">
+                                <div style="display: none;" class="alert alert-info">
                                     Micrófono virtual: <span id="virtualMic">Cargando...</span>
                                 </div>
                             </div>
@@ -57,7 +57,7 @@
                         <div class="input-group">
                             <input type="text" id="message-input" class="form-control" placeholder="Escribe tu mensaje...">
                             <button class="btn btn-primary" id="send-btn">Enviar</button>
-                            <button class="btn btn-secondary" id="voice-btn">🎤</button>
+                            <button style="display: none;" class="btn btn-secondary" id="voice-btn">🎤</button>
                         </div>
                     </div>
                 </div>
